--- a/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
+++ b/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
@@ -1,7 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-	
+
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
-	
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.spellchecker.controller.SpellCheckerController">
-	<!-- TODO Add Nodes -->
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane prefHeight="455.0" prefWidth="422.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.spellchecker.controller.SpellCheckerController">
+   <top>
+      <Label alignment="CENTER" text="Lab3_SpellChecker" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets top="5.0" />
+         </BorderPane.margin>
+      </Label>
+   </top>
+   <center>
+      <VBox prefHeight="344.0" prefWidth="422.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="53.0" prefWidth="422.0">
+               <children>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="59.0" prefWidth="158.0" text="Choose the language:">
+                     <HBox.margin>
+                        <Insets right="5.0" />
+                     </HBox.margin>
+                  </Label>
+                  <VBox prefHeight="53.0" prefWidth="111.0">
+                     <children>
+                        <Pane prefHeight="10.0" prefWidth="111.0" />
+                        <ComboBox fx:id="btnLang" prefWidth="150.0" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
+            <TextField fx:id="txtInitial" onAction="#doCheck" prefHeight="156.0" prefWidth="422.0">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </TextField>
+            <HBox prefHeight="44.0" prefWidth="422.0">
+               <children>
+                  <Pane prefHeight="73.0" prefWidth="358.0">
+                     <children>
+                        <Label layoutX="7.0" layoutY="14.0" prefHeight="41.0" prefWidth="100.0" text="Wrong words" />
+                     </children>
+                  </Pane>
+                  <Button fx:id="btnCheck" mnemonicParsing="false" onAction="#doCheck" prefHeight="27.0" prefWidth="152.0" text="Spell Check">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+            <TextArea fx:id="txtWrong" editable="false" prefHeight="109.0" prefWidth="422.0">
+               <VBox.margin>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </VBox.margin>
+            </TextArea>
+            <HBox layoutX="10.0" layoutY="192.0" prefHeight="44.0" prefWidth="422.0">
+               <children>
+                  <Pane prefHeight="73.0" prefWidth="358.0">
+                     <children>
+                        <Label fx:id="errCounter" layoutX="208.0" layoutY="2.0" prefHeight="41.0" prefWidth="100.0" textFill="RED" />
+                     </children>
+                  </Pane>
+                  <Button fx:id="btnClear" mnemonicParsing="false" onAction="#doClear" prefHeight="27.0" prefWidth="152.0" text="Clear Text">
+                     <HBox.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+   <bottom>
+      <Label fx:id="timeCounter" prefHeight="23.0" prefWidth="412.0" BorderPane.alignment="CENTER">
+         <BorderPane.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </BorderPane.margin>
+      </Label>
+   </bottom>
 </BorderPane>
