--- a/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
+++ b/Lab3_SpellChecker/src/it/polito/tdp/spellchecker/controller/SpellChecker.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -32,12 +32,12 @@
                   <VBox prefHeight="53.0" prefWidth="111.0">
                      <children>
                         <Pane prefHeight="10.0" prefWidth="111.0" />
-                        <ComboBox fx:id="btnLang" prefWidth="150.0" />
+                        <ChoiceBox fx:id="boxLang" prefWidth="150.0" />
                      </children>
                   </VBox>
                </children>
             </HBox>
-            <TextField fx:id="txtInitial" onAction="#doCheck" prefHeight="156.0" prefWidth="422.0">
+            <TextField fx:id="txtInitial" alignment="TOP_LEFT" onAction="#doCheck" prefHeight="156.0" prefWidth="422.0">
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </VBox.margin>
@@ -65,7 +65,10 @@
                <children>
                   <Pane prefHeight="73.0" prefWidth="358.0">
                      <children>
-                        <Label fx:id="errCounter" layoutX="208.0" layoutY="2.0" prefHeight="41.0" prefWidth="100.0" textFill="RED" />
+                        <Label fx:id="errCounter" alignment="CENTER_RIGHT" contentDisplay="CENTER" layoutX="41.0" layoutY="2.0" prefHeight="33.0" prefWidth="267.0" textFill="RED">
+                           <padding>
+                              <Insets right="10.0" />
+                           </padding></Label>
                      </children>
                   </Pane>
                   <Button fx:id="btnClear" mnemonicParsing="false" onAction="#doClear" prefHeight="27.0" prefWidth="152.0" text="Clear Text">
